Added Image slider component

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -17,7 +17,20 @@ body {
   font-family: 'Comfortaa', cursive;
 }
 
-mapstyles {
-  width: 100%;
-  height: 100%;
+.swiper-button-next,
+.swiper-button-prev {
+    right: 10px;
+    padding: 5px;
+    color: white !important;
+}
+
+.swiper-pagination-bullet {
+  background-color: rgb(219, 210, 210) !important;
+  width: 15px !important;
+  height: 15px !important;
+  opacity: 1 !important;
+}
+
+.swiper-pagination-bullet-active{
+  background-color: white !important;
 }
