--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,19 +19,23 @@ body {
 
 
 .swiper-button-next  {
-  margin: 10px;
-  padding: 30px;
+  top: 45% !important;
+  right: 0px !important;
+  padding: 35px 20px;
   color: white !important;
   background-color: rgb(0, 0, 0, 0.6) !important;
   border-radius: 10%;
+  --swiper-navigation-size: 30px
 }
 
 .swiper-button-prev {
-  margin: 10px;
-  padding: 30px;
+  top: 45% !important;
+  left: 0px !important;
+  padding: 35px 20px;
   color: white !important;
   background-color: rgb(0, 0, 0, 0.6) !important;
   border-radius: 10%;
+  --swiper-navigation-size: 30px
 }
 
 .swiper-pagination-bullet {
